create github pages

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
@@ -66,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/l">free web templates</a></section><section class="header6 cid-qSLIu6zNDr mbr-fullscreen mbr-parallax-background" id="header6-0">
+<section class="engine"><a href="https://mobirise.me/b">create a site for free</a></section><section class="header6 cid-qSLIu6zNDr mbr-fullscreen mbr-parallax-background" id="header6-0">
 
     
 
